--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.0.1'
+//        compose_version = '1.0.1'
+        compose_version = '1.1.1'
         hilt_version = '2.41'
         nav_version = "2.4.2"
     }
@@ -11,7 +12,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
