--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    implementation "com.google.accompanist:accompanist-pager:0.23.1"
 }
 
 kapt {
