--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
@@ -74,6 +75,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     implementation "com.google.accompanist:accompanist-pager:0.23.1"
+
+    implementation "androidx.compose.ui:ui-viewbinding:$compose_version"
 }
 
 kapt {
